<resources>
    <string name="app_name">AxxionSystem</string>
    <string name="welcome_to">¡Bienvenido a!</string>
    <string name="axion_system">AXION SYSTEM</string>
    <string name="gestion_integral">Gestión Integral</string>
    <string name="optimize_inventory_today">Optimiza tu Inventario hoy</string>
    <string name="control_rentals_maintenance">Controla alquileres y mantenimientos en tiempo real.</string>
    <string name="system_modules">Módulos del Sistema</string>
    <string name="inventory">Inventario</string>
    <string name="rentals">Alquileres</string>
    <string name="maintenance">Mantenimiento</string>
    <string name="clients">Clientes</string>
    <string name="user_panel">Panel de Usuarios</string>
    <string name="refresh_symbol">↻</string>
</resources>